# dbtalker

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
.github/skills/frontend-architecture/: SKILL.md
client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx  main.css  main.tsx
scripts/: init-demo.sql  init-multiple-dbs.sh
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/app/: config.py  main.py
server/app/api/: chat.py  conversation_routes.py  databases.py  db_routes.py  dependencies.py  health.py  router.py
server/app/api/routes/: sse.py
server/app/controllers/: chat_controller.py  conversation_controller.py  database_controller.py  db_controller.py
server/app/core/: database.py  security.py
server/app/mocks/: chat_data.py  conversations.py  databases.py
server/app/models/: database.py  domain.py
server/app/routes/: router.py
server/app/schemas/: chat.py  conversation.py  database.py  streaming.py  widgets.py
server/app/services/: ai_service.py  chat_service.py  conversation_service.py  database_service.py  db_service.py  message_service.py
server/app/services/ai_service/: agent_factory.py  ai_service.py  prompts.py  tools.py
server/app/utility/: errors.py
src/: App.tsx  index.css  main.tsx
src/hooks/: useChat.ts
src/routes/: DatabaseRoute.tsx
src/services/: chatService.api.ts  chatService.ts  dbService.ts
src/types/: chat.ts
(+119 files in other folders)
