[project]
name = "server"
version = "0.1.0"
description = "DBTalkie FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "jsonwebtoken>=1.0.0",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
]

[tool.uv]
package = false

[tool.ruff]
# Longitud de línea (como el printWidth de Prettier)
line-length = 100

[tool.ruff.lint]
# Selecciona las reglas (E = Errores, F = Pyflakes, I = Isort, B = Bugbear)
select = ["E", "F", "I", "B"]
# Ignora reglas específicas si te molestan
ignore = []

[tool.ruff.format]
# Usa comillas dobles (estilo Black)
quote-style = "double"
